# phantom-agent-pac

./: .gitignore  AGENTS.md  CLAUDE.md  CONCURRENCY-SWEEP.md  README.md  main_v2.py  probe.py  pyproject.toml  server.py  sweep_concurrency.sh
agent_v2/: agent.py  config.py  prompts.py  system_prompt.md  tools.py  verifier.py
agent_v2/skills/: crm_lookup.md  email_outbound.md  inbox_processing.md
dashboard/src/: App.jsx
docs/: README_RU.md  README_ZH.md  architecture.md  benchmark-overview.md  configuration.md  optimization-guide.md  scoring-rules.md  tasks-catalog.md
pac1-py/: README.md
